testsuite/tests/grammar/invalid_lexers/or_1.lkt
from common import Example

lexer foo_lexer {
    Example <- or("example" "foo" | "bar")
}

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
